# personal-data-lake

./: PLAN.md  RESULTS.md  pyproject.toml
data/: .gitignore
eval/: queries.json  run.py
lake/: __init__.py  brief.py  catalog.py  cli.py  query.py  store.py
lake/ingestors/: __init__.py  base.py  git_commits.py  markdown.py  p3_podcasts.py
tests/: test_brief.py  test_catalog.py  test_cli.py  test_eval.py  test_git_ingestor.py  test_markdown_ingestor.py  test_p3_ingestor.py  test_query.py  test_store.py
