[project]
name = "personal-data-lake"
version = "0.1.0"
description = "Personal data lake: ingest, store, and query your data with DuckDB + Parquet + Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.85.0",
    "click>=8.3.1",
    "duckdb>=1.5.0",
    "gitpython>=3.1.46",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
]

[project.scripts]
lake = "lake.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lake"]
